Fix gap

--- a/frontend/src/Components/Projects/Projects.module.css
+++ b/frontend/src/Components/Projects/Projects.module.css
@@ -41,7 +41,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 30px;
+  gap: 20px;
 }
 
 .projects_img {
